fix: alignment issue with buttons without images

--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -83,11 +83,6 @@
     }
   }
 
-  .info {
-    padding: 5rem;
-    background-color: #528ac7;
-  }
-
   .particles {
     z-index: -1;
     position: absolute;
